fix(chip-set): add some space for the clear all button so it won't overlap chips

--- a/src/components/chip-set/chip-set.scss
+++ b/src/components/chip-set/chip-set.scss
@@ -78,6 +78,9 @@ limel-icon.mdc-chip__icon.mdc-chip__icon--leading {
     &.mdc-chip-set--input {
         padding-top: $padding-top-of-chipset-input;
         padding-bottom: 0;
+        padding-right: pxToRem(
+            32
+        ); // This leaves space for "clear all" button and avoids overlapping with chips
         width: 100%;
 
         .mdc-chip--selected {
